swapping font Montserrat sans-serif with Lato sans-serif and fixing footer bug caused by extra padding and margin adding by bootstrap components

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,12 +45,13 @@ body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
-   font-family: "Montserrat", sans-serif;
+   font-family: "Lato", sans-serif;
 }
 
 h1 {
    text-transform: uppercase;
    text-decoration: underline;
+   font-family: "Montserrat", sans-serif;
 
 }
 
@@ -78,7 +79,7 @@ header {
 .love-logo,
 .fa-heart {
    font-size: 20px;
-   font-family: "Lato", sans-serif;
+   font-family: "Montserrat", sans-serif;
 }
 
 nav {
@@ -180,7 +181,7 @@ span {
 #our-story {
    display: flex;
    flex-direction: column;
-   font-family: "Montserrat", sans-serif;
+   font-family: "Lato", sans-serif;
 
 }
 
@@ -202,7 +203,7 @@ span {
 }
 
 .countdown-title {
-   font-family: "Lato", sans-serif;
+   font-family: "Montserrat", sans-serif;
    text-align: center;
    text-transform: uppercase;
    font-weight: 400;
@@ -290,7 +291,7 @@ span {
 
 
 .welcome-title {
-   font-family: "Lato", sans-serif;
+   font-family: "Montserrat", sans-serif;
    text-transform: uppercase;
    font-weight: 400;
    color: #040403;
@@ -331,14 +332,14 @@ span {
 }
 
 .our-story p {
-   font-family: "Montserrat", sans-serif;
+   font-family: "Lato", sans-serif;
    letter-spacing: 2px;
    line-height: 20px;
    padding: 5px;
 }
 
 .our-story h2 {
-   font-family: "Lato", sans-serif;
+   font-family: "Montserrat", sans-serif;
    letter-spacing: 2px;
    margin: 15px 0;
 }
@@ -381,7 +382,7 @@ span {
 #details {
 
    background-color: rgb(200, 168, 130);
-   font-family: "Montserrat", sans-serif;
+   font-family: "Lato", sans-serif;
    display: flex;
    flex-direction: column;
 
@@ -418,7 +419,7 @@ span {
 
 #ceremony-title h2,
 #celebration-title h2 {
-   font-family: "Lato", sans-serif;
+   font-family: "Montserrat", sans-serif;
 }
 
 .text-details {
@@ -428,7 +429,10 @@ span {
    padding: 10px 15px;
    padding-top: 0;
 }
-
+.where-when p {
+   margin: 5px 0;
+ 
+}
 .where-when {
 
    text-align: start;
@@ -440,7 +444,7 @@ span {
 
 .where-when h3 {
    padding: 10px 0;
-   font-family: "Lato", sans-serif;
+   font-family: "Montserrat", sans-serif;
 }
 
 iframe {
@@ -484,7 +488,7 @@ iframe {
 
 .form-heading {
    font-size: 20px;
-   font-family: "Lato", sans-serif;
+   font-family: "Montserrat", sans-serif;
    text-transform: uppercase;
    text-align: center;
    font-weight: 900;
@@ -590,13 +594,18 @@ footer {
 #social-networks {
    display: flex;
    list-style-type: none;
-
+   margin: 0;
+   padding: 0;
 }
 
 #social-networks i {
    padding-right: 15px;
    color: #312D24;
    font-size: 24px;
+}
+
+.logo {
+   margin: 0;
 }
 
 /*Media query: Large or landscape phones (576px and up)*/
